--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container-principal">
     <header class="cabecalho">
-      <h1 class="titulo-principal">Olá, eu sou João Silva</h1>
+      <h1 class="titulo-principal">Olá, eu sou Cauã Tomita </h1>
       <p class="subtitulo">Desenvolvedor Front-end & Entusiasta de UX/UI</p>
     </header>
 
@@ -20,13 +20,13 @@
       <div class="descricao">
         <h2>Sobre Mim</h2>
         <p>
-          Tenho 28 anos e atuo há 5 anos como desenvolvedor front-end. Sou apaixonado
-          por criar interfaces responsivas e intuitivas, sempre focando na melhor
-          experiência para o usuário.
+          Me chamo Cauã tenho 15 anos e recentemente entrei na etec, no momento estou cursando DS desenvolvimento de sistema,
+          sempre fui apaixonado por computadores e jogos, e desde que conehci a area sempre fiquei curioso de como aqueles jogos e sites eram feitos.
+          Agora me encontro focado em aprender mais sobre a area e me especializar cada vez mais.
         </p>
         <p>
-          No meu tempo livre, gosto de estudar novas tendências de design, praticar
-          esportes e tocar violão.
+          No meu tempo livre gosto de jogar como comentado anteriormente, gosto de pesquisar sobre algumas linguagens que me chamam a atencao,
+                   mesmo nao entendendo muito sobre  
         </p>
       </div>
     </section>
@@ -43,7 +43,7 @@
     </section>
 
     <footer class="rodape">
-      <p>© 2025 João Silva. Todos os direitos reservados.</p>
+      <p>© Cauã Tomita 2025. Todos os direitos reservados.</p>
     </footer>
   </div>
 </body>
